# ansible-collection-alnpir-dummy

./: .pre-commit-config.yaml  README.md  galaxy.yml  pyproject.toml
extensions/molecule/default/: converge.yml
playbooks/: dummy.yml
